# miniviseo

./: .env.example  .gitignore  README.md  pyproject.toml  test_calendar_samples.py  test_memo_error.py  test_real_scenario.py  test_samples.py  test_time_scenario.py
scripts/: check_notion_schema.py
src/: __init__.py  app.py  config.py  server.py
src/agents/: base.py  calendar_agent.py  fallback_agent.py  file_agent.py  note_agent.py  web_agent.py
src/data/: notes.json
src/mcp/: client.py
src/mcp/tools/: __init__.py  calendar_mock.py  file_manager.py  http_fetcher.py  notes.py  notion_calendar.py  notion_notes.py
src/parser/: prompt.txt  request_parser.py  schemas.py
src/router/: agent_router.py
src/session/: __init__.py  repository.py  session_manager.py  sqlite_repository.py
src/utils/: logger.py
tests/: test_agents.py  test_integration.py  test_mcp_tools.py  test_multi_action_integration.py  test_notion_calendar.py  test_notion_notes.py  test_parser.py  test_router.py  test_server.py  test_session.py  test_sqlite_repository.py
